# Schrammel_OJD

./: .gitignore  .gitmodules  CMakeLists.txt  OJD.jucer  README.md
.github/workflows/: BuildAndSignMac.yml  BuildLinux.yml  BuildWindows.yml  build.yml
BinaryResources/: CMakeLists.txt
BinaryResources/Fonts/: license.txt
BinaryResources/SVGs/: CMakeLists.txt
Deployment/: CMakeLists.txt
Deployment/MacOS/: CMakeLists.txt  Schrammel OJD.pkgproj
Deployment/Texts/: Intro.txt
Deployment/Windows/: CMakeLists.txt  OJD Installer.iss  Readme.md
Deployment/mac/: Schrammel OJD.pkgproj
Deployment/mac/Texts/: Intro.txt
Deployment/windows/: OJD Installer.iss
Source/: Drawables.h  OJDAudioProcessorEditor.cpp  OJDAudioProcessorEditor.h  OJDLookAndFeel.h  OJDParameters.cpp  OJDParameters.h  OJDPedalComponent.cpp  OJDPedalComponent.h  OJDProcessor.cpp  OJDProcessor.h  SettingsPage.h  SlideSwitch.h  ToneStack.h  Waveshaper.h
UiDesign/: OJD v2.xd
